--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ timezone:
 
 title: sunnamed434                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: .NET Software Engineer + Computer Engineer   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  .NET Software Engineer + Computer Engineer
+  Reverse Engineering, Obfuscation/Deobfuscation, .NET Architecture
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://sunnamed434.github.io'
