--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ avatar: https://avatars.githubusercontent.com/u/65300126?v=4
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus        # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -97,14 +97,14 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:      sunnamed434/blog-comments        # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping:           # optional, default to 'pathname'
-    input_position:    # optional, default to 'bottom'
-    lang:              # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: sunnamed434/blog-comments        # <gh-username>/<repo>
+    repo_id: R_kgDOIpGimQ
+    category: General
+    category_id: DIC_kwDOIpGimc4CTJh8
+    mapping: pathname           # optional, default to 'pathname'
+    input_position: bottom    # optional, default to 'bottom'
+    lang: en              # optional, default to the value of `site.lang`
+    reactions_enabled: 1 # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
